--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,10 @@
 <h1>Archives for Fulton Byrne</h1>
 
 <dl>
+    <dt>Thu 18 December 2014</dt>
+    <dd><a href="/when-you-want-to-edit-path-variables.html">When You Want to Edit $PATH variables . . .</a></dd>
+    <dt>Thu 18 December 2014</dt>
+    <dd><a href="/when-you-want-to-install-a-new-program-on-ubuntu-but-its-not-in-apt.html">When you want to install a new program on Ubuntu, but it's not in apt . . .</a></dd>
     <dt>Tue 09 December 2014</dt>
     <dd><a href="/bubbles-part-1.html">Bubbles Part 1</a></dd>
     <dt>Tue 09 December 2014</dt>
