--- a/when-you-want-to-install-a-new-program-on-ubuntu-but-its-not-in-apt.html
+++ b/when-you-want-to-install-a-new-program-on-ubuntu-but-its-not-in-apt.html
@@ -72,6 +72,7 @@
                         <ul>
 
                             <li><a href="https://www.linkedin.com/profile/view?id=63933080&trk=spm_pic">LinkedIn</a></li>
+                            <li><a href="https://github.com/Freyert">GitHub</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
